# kairo

./: .gitignore  TODO.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/dashboard/: route.ts
app/api/summarize/: route.ts
app/api/transcribe/: route.ts
app/api/webhooks/clerk/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/dashboard/new/: page.tsx
app/dashboard/videos/[id]/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: repository.py
backend/app/pipeline/: github_service.py  indexer.py  models.py  tools.py
backend/app/pipeline/graph/: graph_builder.py  nodes.py
backend/app/services/: github_service.py  repo_loader.py
backend/app/utils/: config.py  qdrant.py
backend/app/workflows/: agent.py  indexer.py  tools.py
backend/app/workflows/prompts/: test.txt
components/: auth-provider.tsx  dashboard-nav.tsx  record-video-button.tsx  user-nav.tsx  video-card.tsx  video-player.tsx  video-recorder.tsx  video-transcript.tsx
components/ui/: button.tsx
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/codebase/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/rfcs/: page.tsx
frontend/app/rfcs/new/: page.tsx
frontend/components/: user-button.tsx
frontend/lib/: github.ts
lib/: db.ts  mock-data.ts
lib/actions/: user.actions.ts
lib/model/: dashboard.model.ts  user.model.ts
