[project]
name = "github-analyzer-backend"
version = "0.1.0"
description = "GitHub repository analyzer backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "pygithub>=1.59.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "langchain>=0.3.25",
    "openai>=1.82.1",
    "qdrant-client>=1.14.2",
    "langchainhub>=0.1.21",
    "tiktoken>=0.9.0",
    "langchain-community>=0.3.24",
    "langchain-qdrant>=0.2.0",
    "sentence-transformers>=2.5.1",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
